# rust_arduino

./: Cargo.toml  README.md  arduino.yaml  build.rs  build_arduino_helper.rs  clibs_bindings.yaml  rust-toolchain.toml
.cargo/: config.toml
src/: arduino_patch.rs  clibs_arduino.rs  clibs_bindings.rs  clibs_bindings_patch.rs  clibs_local_bindings.rs  main.rs
src_c/: arduino_helper_lib.cpp  arduino_helper_lib.h
